bifrost/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bifrost
spec:
  selector:
    app: bifrost
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
