bifrost/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bifrost
spec:
  rules:
    - host: bifrost.katsuro.shop
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: bifrost
                port:
                  number: 80
